<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/upcoming_elections_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:letterSpacing="0.01"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"
            android:text="@string/upcoming_elections"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_elections_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_title" />

	    <TextView
            android:id="@+id/upcoming_elections_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_elections"
            android:layout_margin="@dimen/normal_margin"
            android:textSize="16sp"
            app:isVisible="@{viewModel.upcomingElections}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_title" />

        <TextView
            android:id="@+id/saved_elections_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:letterSpacing="0.01"
            android:textColor="@android:color/black"
            android:layout_margin="16dp"
            android:text="@string/saved_elections"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_elections_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saved_elections_title" />
	    
	    
        <TextView
            android:id="@+id/saved_elections_empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_elections_found"
            android:layout_margin="@dimen/normal_margin"
            android:textSize="16sp"
            app:isVisible="@{viewModel.savedElections}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/saved_elections_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>